<resources>
    <string name="app_name">Relative Layout</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="btn3">Button 3</string>
    <string name="btn4">Button 4</string>
    <string name="btn5">Button 5</string>
    <string name="btn6">Button 6</string>
    <string name="btn7">Button 7</string>
    <string name="btn8">Button 8</string>
    <string name="btn9">Button 9</string>
    <string name="btn10">Button 10</string>
    <string name="btn11">Button 11</string>
    <string name="btn12">Button 12</string>
    <string name="btn13">Button 13</string>
    <string name="btn14">Button 14</string>
    <string name="btn15">Button 15</string>
</resources>
