<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:layout_below="@id/btn1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn2"/>
    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6"
        android:layout_below="@id/btn3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn7"
        android:layout_below="@id/btn6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn8"
        android:layout_below="@id/btn7"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn9"
        android:layout_below="@id/btn7"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    <Button
        android:id="@+id/btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn10"
        android:layout_below="@id/btn8"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/btn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn11"
        android:layout_below="@id/btn8"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn12"
        android:layout_below="@id/btn11"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn13"
        android:layout_below="@id/btn12"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/btn14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn14"
        android:layout_below="@id/btn13"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn15"
        android:layout_below="@id/btn14"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>